@@ -160,6 +160,9 @@ functions:
   the specific lensmodel type is unknown here. The legacy alias
   =mrcal_cameramodel_t= is still available for backwards-compatibility
 
+- Added =mrcal_intrinsics_XXX_t= structures to represent camera intrinsics.
+  These are exactly like =mrcal_cameramodel_XXX_t= but without the extrinsics
+
 * Migration notes 2.4 -> 2.5
 
 2024-12-06 compose_r(), compose_rt(), compose_Rt() have new args:
